--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,8 @@
    --border:.1rem solid rgba(0,0,0,.3);
 }
 
+// start style
+
 *{
    font-family: 'Poppins', sans-serif;
    margin:0; padding:0;
